style: fixing scrollbar in mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,11 +25,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-::-webkit-scrollbar {
-  width: 2px;
-}
+@media (min-width: 720px) {
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
 
-::-webkit-scrollbar-thumb {
-  border: 30px solid transparent;
-  background-clip: content-box;
+  ::-webkit-scrollbar-thumb {
+    border: 10px solid transparent;
+    background-clip: content-box;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 9999px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
 }
